// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayerStatRow > matches snapshot > PlayerStatRow - default 1`] = `
<DocumentFragment>
  <table
    class="MuiTable-root css-73gcid-MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root css-qjqu21-MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-3llkuv-MuiTableCell-root"
          scope="row"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1r5ov08-MuiTypography-root"
          >
            #23
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-18jerww-MuiTypography-root"
          >
            LeBron
            <span
              aria-label="Hot Streak"
              class="MuiBox-root css-14gt3bc"
              data-mui-internal-clone-element="true"
              role="img"
            >
              🔥
            </span>
          </span>
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          35
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          27
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          7
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          42.9%
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          6
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          8
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          75.0%
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          8
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          10
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-g2lwts-MuiTableCell-root"
        >
          2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-142sz41-MuiTableCell-root"
        >
          +12
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PlayerStatRow > matches snapshot when fouled out > PlayerStatRow - fouled out 1`] = `
<DocumentFragment>
  <table
    class="MuiTable-root css-73gcid-MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root css-qjqu21-MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-3llkuv-MuiTableCell-root"
          scope="row"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1r5ov08-MuiTypography-root"
          >
            #23
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-18jerww-MuiTypography-root"
          >
            LeBron
            <span
              aria-label="Hot Streak"
              class="MuiBox-root css-14gt3bc"
              data-mui-internal-clone-element="true"
              role="img"
            >
              🔥
            </span>
          </span>
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          35
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          27
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          7
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          42.9%
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          6
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          8
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          75.0%
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          8
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          10
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1snn2sj-MuiTableCell-root"
        >
          5
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-142sz41-MuiTableCell-root"
        >
          +12
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PlayerStatRow > matches snapshot when in foul trouble > PlayerStatRow - foul trouble 1`] = `
<DocumentFragment>
  <table
    class="MuiTable-root css-73gcid-MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root css-qjqu21-MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-3llkuv-MuiTableCell-root"
          scope="row"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1r5ov08-MuiTypography-root"
          >
            #23
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-18jerww-MuiTypography-root"
          >
            LeBron
            <span
              aria-label="Hot Streak"
              class="MuiBox-root css-14gt3bc"
              data-mui-internal-clone-element="true"
              role="img"
            >
              🔥
            </span>
          </span>
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          35
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          27
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          7
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          42.9%
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          6
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          8
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          75.0%
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          8
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          10
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-4hi0hb-MuiTableCell-root"
        >
          3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-12zpt55-MuiTableCell-root"
        >
          4
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-142sz41-MuiTableCell-root"
        >
          +12
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
